--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -359,7 +359,7 @@ label[for="Motdepasse"] {
 
 .modification {
   cursor: pointer;
-  display: inline-block;
+  display: none;
   color: #000;
   text-align: center;
   font-family: Work Sans;
